implementing changes to login and alert

--- a/src/main/java/config/db.properties
+++ b/src/main/java/config/db.properties
@@ -1,4 +1,4 @@
-user=developer
-password=1234
+user=root
+password=e%&B*Dw*AZJvPgFqn3p2
 dburl=jdbc:mysql://localhost:3306/digital-signature
 useSSl=false
